kube/ingress/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app2
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      name: nginx-app2
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: lerndevops/nginx:app2
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-app2-svc
spec:
  ports:
  - port: 80
  selector:
    app: app2
